set(ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX-")

add_compile_definitions(_SILENCE_AMP_DEPRECATION_WARNINGS)

set(SOURCE_DIR "${ROOT_DIR}/src")

set(SOURCE_FILES
	"${SOURCE_DIR}/Bullet3Geometry/b3ConvexHullComputer.h"
	"${SOURCE_DIR}/Bullet3Geometry/b3GeometryUtil.cpp"
	"${SOURCE_DIR}/Bullet3Geometry/b3GeometryUtil.h"
	"${SOURCE_DIR}/Bullet3Geometry/b3GrahamScan2dConvexHull.h"
	"${SOURCE_DIR}/Bullet3Geometry/b3AabbUtil.h"
	"${SOURCE_DIR}/Bullet3Geometry/b3ConvexHullComputer.cpp"
	"${SOURCE_DIR}/Bullet3Collision/BroadPhaseCollision/shared/b3Aabb.h"
	"${SOURCE_DIR}/Bullet3Collision/BroadPhaseCollision/b3BroadphaseCallback.h"
	"${SOURCE_DIR}/Bullet3Collision/BroadPhaseCollision/b3DynamicBvh.cpp"
	"${SOURCE_DIR}/Bullet3Collision/BroadPhaseCollision/b3DynamicBvh.h"
	"${SOURCE_DIR}/Bullet3Collision/BroadPhaseCollision/b3DynamicBvhBroadphase.cpp"
	"${SOURCE_DIR}/Bullet3Collision/BroadPhaseCollision/b3DynamicBvhBroadphase.h"
	"${SOURCE_DIR}/Bullet3Collision/BroadPhaseCollision/b3OverlappingPair.h"
	"${SOURCE_DIR}/Bullet3Collision/BroadPhaseCollision/b3OverlappingPairCache.cpp"
	"${SOURCE_DIR}/Bullet3Collision/BroadPhaseCollision/b3OverlappingPairCache.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3Contact4Data.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3ContactConvexConvexSAT.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3ContactSphereSphere.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3ConvexPolyhedronData.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3FindConcaveSatAxis.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3FindSeparatingAxis.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3MprPenetration.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3NewContactReduction.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3QuantizedBvhNodeData.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3ReduceContacts.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3RigidBodyData.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3UpdateAabbs.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3BvhSubtreeInfoData.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3BvhTraversal.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3ClipFaces.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/shared/b3Collidable.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/b3RigidBodyCL.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/b3Config.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/b3Contact4.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/b3ConvexUtility.cpp"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/b3ConvexUtility.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/b3CpuNarrowPhase.cpp"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/b3CpuNarrowPhase.h"
	"${SOURCE_DIR}/Bullet3Collision/NarrowPhaseCollision/b3RaycastInfo.h"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3ContactSolverInfo.h"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3FixedConstraint.cpp"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3FixedConstraint.h"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3Generic6DofConstraint.cpp"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3Generic6DofConstraint.h"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3JacobianEntry.h"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3PgsJacobiSolver.cpp"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3PgsJacobiSolver.h"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3Point2PointConstraint.cpp"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3Point2PointConstraint.h"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3SolverBody.h"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3SolverConstraint.h"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3TypedConstraint.cpp"
	"${SOURCE_DIR}/Bullet3Dynamics/ConstraintSolver/b3TypedConstraint.h"
	"${SOURCE_DIR}/Bullet3Dynamics/shared/b3ContactConstraint4.h"
	"${SOURCE_DIR}/Bullet3Dynamics/shared/b3ConvertConstraint4.h"
	"${SOURCE_DIR}/Bullet3Dynamics/shared/b3Inertia.h"
	"${SOURCE_DIR}/Bullet3Dynamics/shared/b3IntegrateTransforms.h"
	"${SOURCE_DIR}/Bullet3Dynamics/b3CpuRigidBodyPipeline.h"
	"${SOURCE_DIR}/Bullet3Dynamics/b3CpuRigidBodyPipeline.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btAxisSweep3.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btAxisSweep3Internal.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDbvt.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDbvt.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDbvtBroadphase.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDispatcher.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDispatcher.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btOverlappingPairCache.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btOverlappingPairCallback.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btQuantizedBvh.h"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp"
	"${SOURCE_DIR}/BulletCollision/BroadphaseCollision/btSimpleBroadphase.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btBoxBoxDetector.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionConfiguration.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionDispatcher.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionDispatcherMt.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionDispatcherMt.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionObject.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionObject.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionObjectWrapper.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionWorld.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionWorld.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionWorldImporter.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btGhostObject.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btGhostObject.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btHashedSimplePairCache.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btInternalEdgeUtility.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btManifoldResult.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btManifoldResult.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btSimulationIslandManager.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btUnionFind.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btUnionFind.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/SphereTriangleDetector.h"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btBox2dShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btBoxShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btBoxShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btCapsuleShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btCapsuleShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btCollisionMargin.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btCollisionShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btCollisionShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btCompoundShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btCompoundShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConcaveShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConcaveShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConeShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConeShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvex2dShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvex2dShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexHullShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexHullShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexInternalShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexInternalShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexPointCloudShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexPolyhedron.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexPolyhedron.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btCylinderShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btCylinderShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btEmptyShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btEmptyShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btMaterial.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btMiniSDF.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btMiniSDF.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btMinkowskiSumShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btMultiSphereShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btMultiSphereShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btOptimizedBvh.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btOptimizedBvh.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btPolyhedralConvexShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btSdfCollisionShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btSdfCollisionShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btShapeHull.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btShapeHull.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btSphereShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btSphereShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btStaticPlaneShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btStridingMeshInterface.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTetrahedronShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTetrahedronShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleBuffer.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleBuffer.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleCallback.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleCallback.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleInfoMap.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleMesh.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleMesh.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleMeshShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btUniformScalingShape.cpp"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btUniformScalingShape.h"
	"${SOURCE_DIR}/BulletCollision/CollisionShapes/btBox2dShape.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btClipPolygon.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btCompoundFromGimpact.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btContactProcessing.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btContactProcessing.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btContactProcessingStructs.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGenericPoolAllocator.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGenericPoolAllocator.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGeometryOperations.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactBvh.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactBvh.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactBvhStructs.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactMassUtil.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactQuantizedBvh.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactQuantizedBvhStructs.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactShape.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btGImpactShape.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btQuantization.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btTriangleShapeEx.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btTriangleShapeEx.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_array.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_basic_geometry_operations.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_bitset.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_box_collision.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_box_set.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_box_set.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_clip_polygon.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_contact.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_contact.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_geom_types.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_geometry.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_hash_table.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_linear_math.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_math.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_memory.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_memory.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_pair.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_radixsort.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_tri_collision.cpp"
	"${SOURCE_DIR}/BulletCollision/Gimpact/gim_tri_collision.h"
	"${SOURCE_DIR}/BulletCollision/Gimpact/btBoxCollision.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btConvexCast.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btConvexPenetrationDepthSolver.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkCollisionDescription.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpa3.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btMprPenetration.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPointCollector.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btRaycastCallback.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btSimplexSolverInterface.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btComputeGjkEpaPenetration.h"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp"
	"${SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.h"
	"${SOURCE_DIR}/BulletDynamics/Character/btCharacterControllerInterface.h"
	"${SOURCE_DIR}/BulletDynamics/Character/btKinematicCharacterController.cpp"
	"${SOURCE_DIR}/BulletDynamics/Character/btKinematicCharacterController.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btBatchedConstraints.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btConeTwistConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btConstraintSolver.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btContactConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btContactConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btContactSolverInfo.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btFixedConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btFixedConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGearConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGearConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btHinge2Constraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btHingeConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btHingeConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btJacobianEntry.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolverMt.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolverMt.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSliderConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSliderConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSolverBody.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSolverConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btTypedConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btTypedConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btUniversalConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/ConstraintSolver/btBatchedConstraints.cpp"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btDiscreteDynamicsWorldMt.cpp"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btDiscreteDynamicsWorldMt.h"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btDynamicsWorld.h"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btRigidBody.cpp"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btRigidBody.h"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btSimpleDynamicsWorld.h"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btSimulationIslandManagerMt.cpp"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btSimulationIslandManagerMt.h"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btActionInterface.h"
	"${SOURCE_DIR}/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyConstraintSolver.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyConstraintSolver.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyFixedConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyFixedConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyGearConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyGearConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyInplaceSolverIslandCallback.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyJointFeedback.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyJointMotor.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyJointMotor.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyLink.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyLinkCollider.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyMLCPConstraintSolver.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyMLCPConstraintSolver.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyPoint2Point.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyPoint2Point.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodySliderConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodySliderConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodySolverConstraint.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodySphericalJointMotor.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodySphericalJointMotor.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBody.cpp"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBody.h"
	"${SOURCE_DIR}/BulletDynamics/Featherstone/btMultiBodyConstraint.cpp"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btLemkeAlgorithm.cpp"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btLemkeAlgorithm.h"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btLemkeSolver.h"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btMLCPSolver.cpp"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btMLCPSolver.h"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btMLCPSolverInterface.h"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btPATHSolver.h"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btSolveProjectedGaussSeidel.h"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btDantzigLCP.cpp"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btDantzigLCP.h"
	"${SOURCE_DIR}/BulletDynamics/MLCPSolvers/btDantzigSolver.h"
	"${SOURCE_DIR}/BulletDynamics/Vehicle/btRaycastVehicle.h"
	"${SOURCE_DIR}/BulletDynamics/Vehicle/btVehicleRaycaster.h"
	"${SOURCE_DIR}/BulletDynamics/Vehicle/btWheelInfo.cpp"
	"${SOURCE_DIR}/BulletDynamics/Vehicle/btWheelInfo.h"
	"${SOURCE_DIR}/BulletDynamics/Vehicle/btRaycastVehicle.cpp"
	"${SOURCE_DIR}/LinearMath/btAlignedAllocator.cpp"
	"${SOURCE_DIR}/LinearMath/btAlignedAllocator.h"
	"${SOURCE_DIR}/LinearMath/btAlignedObjectArray.h"
	"${SOURCE_DIR}/LinearMath/btConvexHull.cpp"
	"${SOURCE_DIR}/LinearMath/btConvexHull.h"
	"${SOURCE_DIR}/LinearMath/btConvexHullComputer.cpp"
	"${SOURCE_DIR}/LinearMath/btConvexHullComputer.h"
	"${SOURCE_DIR}/LinearMath/btCpuFeatureUtility.h"
	"${SOURCE_DIR}/LinearMath/btDefaultMotionState.h"
	"${SOURCE_DIR}/LinearMath/btGeometryUtil.cpp"
	"${SOURCE_DIR}/LinearMath/btGeometryUtil.h"
	"${SOURCE_DIR}/LinearMath/btGrahamScan2dConvexHull.h"
	"${SOURCE_DIR}/LinearMath/btHashMap.h"
	"${SOURCE_DIR}/LinearMath/btIDebugDraw.h"
	"${SOURCE_DIR}/LinearMath/btImplicitQRSVD.h"
	"${SOURCE_DIR}/LinearMath/btList.h"
	"${SOURCE_DIR}/LinearMath/btMatrix3x3.h"
	"${SOURCE_DIR}/LinearMath/btMatrixX.h"
	"${SOURCE_DIR}/LinearMath/btMinMax.h"
	"${SOURCE_DIR}/LinearMath/btModifiedGramSchmidt.h"
	"${SOURCE_DIR}/LinearMath/btMotionState.h"
	"${SOURCE_DIR}/LinearMath/btPolarDecomposition.cpp"
	"${SOURCE_DIR}/LinearMath/btPolarDecomposition.h"
	"${SOURCE_DIR}/LinearMath/btPoolAllocator.h"
	"${SOURCE_DIR}/LinearMath/btQuadWord.h"
	"${SOURCE_DIR}/LinearMath/btQuaternion.h"
	"${SOURCE_DIR}/LinearMath/btQuickprof.cpp"
	"${SOURCE_DIR}/LinearMath/btQuickprof.h"
	"${SOURCE_DIR}/LinearMath/btRandom.h"
	"${SOURCE_DIR}/LinearMath/btReducedVector.cpp"
	"${SOURCE_DIR}/LinearMath/btReducedVector.h"
	"${SOURCE_DIR}/LinearMath/btScalar.h"
	"${SOURCE_DIR}/LinearMath/btSerializer.cpp"
	"${SOURCE_DIR}/LinearMath/btSerializer.h"
	"${SOURCE_DIR}/LinearMath/btSerializer64.cpp"
	"${SOURCE_DIR}/LinearMath/btSpatialAlgebra.h"
	"${SOURCE_DIR}/LinearMath/btStackAlloc.h"
	"${SOURCE_DIR}/LinearMath/btThreads.cpp"
	"${SOURCE_DIR}/LinearMath/btThreads.h"
	"${SOURCE_DIR}/LinearMath/btTransform.h"
	"${SOURCE_DIR}/LinearMath/btTransformUtil.h"
	"${SOURCE_DIR}/LinearMath/btVector3.cpp"
	"${SOURCE_DIR}/LinearMath/btVector3.h"
	"${SOURCE_DIR}/LinearMath/btAabbUtil2.h"
	"${SOURCE_DIR}/LinearMath/TaskScheduler/btTaskScheduler.cpp"
	"${SOURCE_DIR}/LinearMath/TaskScheduler/btThreadSupportInterface.h"
	"${SOURCE_DIR}/LinearMath/TaskScheduler/btThreadSupportPosix.cpp"
	"${SOURCE_DIR}/LinearMath/TaskScheduler/btThreadSupportWin32.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtAabb.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtAABB.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtBone.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtBoneScaleConstraint.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtBoneScaleConstraint.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtBulletHelper.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtCollider.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtCollider.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtCollisionAlgorithm.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtCollisionAlgorithm.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtConeTwistConstraint.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtConeTwistConstraint.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtConstraintGroup.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtConstraintGroup.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtCudaInterface.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtCudaInterface.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtDispatcher.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtDispatcher.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtFrameTimer.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtFrameTimer.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtGeneric6DofConstraint.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtGeneric6DofConstraint.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtGroupConstraintSolver.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtGroupConstraintSolver.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtLCP.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtLCP.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSimulationIslandManager.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSimulationIslandManager.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshAlgorithm.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshAlgorithm.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshBody.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshBody.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshBone.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshBone.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshShape.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshShape.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshSystem.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshSystem.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshWorld.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtSkinnedMeshWorld.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtStiffSpringConstraint.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtStiffSpringConstraint.h"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtVertex.cpp"
	"${SOURCE_DIR}/hdtSkinnedMesh/hdtVertex.h"
	"${SOURCE_DIR}/Events.h"
	"${SOURCE_DIR}/Events.cpp"
	"${SOURCE_DIR}/Hooks.cpp"
	"${SOURCE_DIR}/Hooks.h"
	"${SOURCE_DIR}/dhdtPapyrusFunctions.cpp"
	"${SOURCE_DIR}/dhdtPapyrusFunctions.h"
	"${SOURCE_DIR}/EventDebugLogger.cpp"
	"${SOURCE_DIR}/EventDebugLogger.h"
	"${SOURCE_DIR}/Events.cpp"
	"${SOURCE_DIR}/Events.h"
	"${SOURCE_DIR}/dhdtOverrideManager.cpp"
	"${SOURCE_DIR}/dhdtOverrideManager.h"
	"${SOURCE_DIR}/hdtForceUpdateList.cpp"
	"${SOURCE_DIR}/hdtForceUpdateList.h"
	"${SOURCE_DIR}/config.cpp"
	"${SOURCE_DIR}/config.h"
	"${SOURCE_DIR}/hdtSerialization.cpp"
	"${SOURCE_DIR}/hdtSerialization.h"
	"${SOURCE_DIR}/PluginAPI.h"
	"${SOURCE_DIR}/PluginInterfaceImpl.cpp"
	"${SOURCE_DIR}/PluginInterfaceImpl.h"
	"${SOURCE_DIR}/DynamicHDT.cpp"
	"${SOURCE_DIR}/DynamicHDT.h"
	"${SOURCE_DIR}/WeatherManager.cpp"
	"${SOURCE_DIR}/WeatherManager.h"
	"${SOURCE_DIR}/ActorManager.cpp"
	"${SOURCE_DIR}/ActorManager.h"
	"${SOURCE_DIR}/hdtSkyrimPhysicsWorld.cpp"
	"${SOURCE_DIR}/hdtSkyrimPhysicsWorld.h"
	"${SOURCE_DIR}/hdtDefaultBBP.cpp"
	"${SOURCE_DIR}/hdtDefaultBBP.h"
	"${SOURCE_DIR}/hdtSkyrimBody.cpp"
	"${SOURCE_DIR}/hdtSkyrimBody.h"
	"${SOURCE_DIR}/hdtSkyrimBone.cpp"
	"${SOURCE_DIR}/hdtSkyrimBone.h"
	"${SOURCE_DIR}/hdtConvertNi.cpp"
	"${SOURCE_DIR}/hdtConvertNi.h"
	"${SOURCE_DIR}/hdtSkyrimSystem.cpp"
	"${SOURCE_DIR}/hdtSkyrimSystem.h"
	"${SOURCE_DIR}/XmlInspector/CharactersReader.hpp"
	"${SOURCE_DIR}/XmlInspector/CharactersWriter.hpp"
	"${SOURCE_DIR}/XmlInspector/XmlInspector.hpp"
	"${SOURCE_DIR}/XmlReader.h"
	"${SOURCE_DIR}/XmlReader.cpp"
	"${SOURCE_DIR}/IString.h"
	"${SOURCE_DIR}/StringImpl.h"
	"${SOURCE_DIR}/FrameworkUtils.h"
	"${SOURCE_DIR}/NetImmerseUtils.h"
	"${SOURCE_DIR}/StringImpl.cpp"
	"${SOURCE_DIR}/main.h"
	"${SOURCE_DIR}/main.cpp"
	"${SOURCE_DIR}/PCH.h"
)
source_group(TREE "${ROOT_DIR}" FILES ${SOURCE_FILES})

set(VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/src/Plugin.h")

configure_file(
	"${ROOT_DIR}/cmake/Plugin.h.in"
	"${VERSION_HEADER}"
	@ONLY
)

source_group("src" FILES "${VERSION_HEADER}")

configure_file(
	"${ROOT_DIR}/cmake/version.rc.in"
	"${CMAKE_CURRENT_BINARY_DIR}/version.rc"
	@ONLY
)

find_path(DETOURS_INCLUDE_DIRS "detours/detours.h")
find_library(DETOURS_LIBRARY detours REQUIRED)

add_library(
	"${PROJECT_NAME}"
	SHARED
	${SOURCE_FILES}
	"${VERSION_HEADER}"
	"${CMAKE_CURRENT_BINARY_DIR}/version.rc"
	"${ROOT_DIR}/.clang-format"
	"${ROOT_DIR}/.editorconfig"
)

target_compile_features(
	"${PROJECT_NAME}"
	PRIVATE
		cxx_std_20
)

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	target_compile_options(
		"${PROJECT_NAME}"
		PRIVATE
			"/sdl"	# Enable Additional Security Checks
			"/utf-8"	# Set Source and Executable character sets to UTF-8
			"/Zi"	# Debug Information Format

			"/permissive-"	# Standards conformance
			"/Zc:preprocessor"	# Enable preprocessor conformance mode

			"/bigobj"	# Increase Number of Sections in .obj file

			"$<$<CONFIG:DEBUG>:>"
			"$<$<CONFIG:RELEASE>:/Zc:inline;/JMC-;/Ob3>"
	)

	target_link_options(
		"${PROJECT_NAME}"
		PRIVATE
			"$<$<CONFIG:DEBUG>:/INCREMENTAL;/OPT:NOREF;/OPT:NOICF>"
			"$<$<CONFIG:RELEASE>:/INCREMENTAL:NO;/OPT:REF;/OPT:ICF;/DEBUG:FULL>"
	)
endif()

target_include_directories(
	"${PROJECT_NAME}"
	PRIVATE
		"${CMAKE_CURRENT_BINARY_DIR}/src"
		"${SOURCE_DIR}"
		${DETOURS_LIBRARY}
		${BULLET_INCLUDE_DIRS}
)

set(SKSE_SUPPORT_XBYAK ON)

# dependency macros
macro(find_dependency_path DEPENDENCY FILE)
	# searches extern for dependencies and if not checks the environment variable
	if(NOT ${DEPENDENCY} STREQUAL "")
		# Check extern
		message(
			STATUS
			"Searching for ${DEPENDENCY} using file ${FILE}"
		)
		find_path(PATH
			${FILE}
			PATHS
			"../extern/${DEPENDENCY}"
			"extern/${DEPENDENCY}"
			"../external/${DEPENDENCY}"
			"external/${DEPENDENCY}")

		set("${DEPENDENCY}Path" "${PATH}")
		message("${PATH}")
		message("${DEPENDENCY}Path")
		message("${${DEPENDENCY}Path}")
		if("${${DEPENDENCY}Path}" STREQUAL "PATH-NOTFOUND")
			# Check path
			message(
				STATUS
				"Getting environment variable for ${DEPENDENCY}Path: $ENV{${DEPENDENCY}Path}"
			)
			set("${DEPENDENCY}Path" "$ENV{${DEPENDENCY}Path}")
		endif()

		if (NOT "${${DEPENDENCY}Path}" STREQUAL "")
			message(
				STATUS
				"Found ${DEPENDENCY} in ${${DEPENDENCY}Path}; adding"
			)
			add_subdirectory("${${DEPENDENCY}Path}" ${DEPENDENCY})
		endif()
	endif()
endmacro()

# dependencies
find_dependency_path(CommonLibSSE include/REL/Relocation.h)

if(("${CommonLibSSEPath}" STREQUAL "CommonLibSSEPath-NOTFOUND") OR "${CommonLibSSEPath}" STREQUAL "")
	# fallback to CommonLibSSEPath_NG from environment
	message(
		STATUS
		"Found CommonLibSSE from CommonLibSSEPath_NG environment variable"
	)
	add_subdirectory("$ENV{CommonLibSSEPath_NG}" CommonLibSSE EXCLUDE_FROM_ALL)
endif()

find_package(Bullet CONFIG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
find_package(xbyak REQUIRED CONFIG)

include_directories(${BULLET_INCLUDE_DIRS})

target_link_libraries(
	"${PROJECT_NAME}"
	PRIVATE
		CommonLibSSE::CommonLibSSE
		xbyak::xbyak
		spdlog::spdlog
		${DETOURS_LIBRARY}
		${BULLET_LIBRARIES}
)

target_precompile_headers(
	"${PROJECT_NAME}"
	PRIVATE
		"${SOURCE_DIR}/PCH.h"
)

install(
	FILES
		"$<TARGET_FILE:${PROJECT_NAME}>"
	DESTINATION "SKSE/Plugins"
	COMPONENT "main"
)

install(
	FILES
		"$<TARGET_PDB_FILE:${PROJECT_NAME}>"
	DESTINATION "/"
	COMPONENT "pdbs"
)

if("${COPY_OUTPUT}")
	add_custom_command(
		TARGET "${PROJECT_NAME}"
		POST_BUILD
		COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:${PROJECT_NAME}>" "${CompiledPluginsPath}/SKSE/Plugins/"
		COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_PDB_FILE:${PROJECT_NAME}>" "${CompiledPluginsPath}/SKSE/Plugins/"
		VERBATIM
	)
endif()